[gd_scene load_steps=7 format=3 uid="uid://cvivlt0sjinn5"]

[ext_resource type="Theme" uid="uid://bix50iqwowkq5" path="res://addons/AIStateMachine/Themes/AIStateMachineTheme.tres" id="1_2gkkr"]
[ext_resource type="Script" path="res://addons/AIStateMachine/Scripts/AIStateNode.gd" id="1_xc36p"]
[ext_resource type="Texture2D" uid="uid://jjhogeoe5sda" path="res://addons/AIStateMachine/Icons/NodeLink1.png" id="3_i1e4p"]
[ext_resource type="Texture2D" uid="uid://tels42klcuyi" path="res://addons/AIStateMachine/Icons/Trash.png" id="3_kkjrs"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gjuyh"]
bg_color = Color(0.607843, 0.607843, 0.607843, 0)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 0.756863, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d7inu"]
bg_color = Color(0.47451, 0.47451, 0.47451, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[node name="AIStateNode0" type="Control" groups=["StateNode"]]
custom_minimum_size = Vector2(256, 42)
layout_mode = 3
anchors_preset = 0
offset_right = 256.0
offset_bottom = 42.0
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_xc36p")

[node name="State" type="Button" parent="."]
custom_minimum_size = Vector2(256, 42)
layout_mode = 0
offset_right = 4.0
offset_bottom = 4.0
focus_mode = 0
theme = ExtResource("1_2gkkr")
theme_override_font_sizes/font_size = 24
text = "   empty_state"
alignment = 0
text_overrun_behavior = 1

[node name="Arrow" type="Label" parent="State"]
visible = false
custom_minimum_size = Vector2(32, 38)
layout_mode = 0
offset_left = 200.0
offset_top = 1.0
offset_right = 232.0
offset_bottom = 39.0
pivot_offset = Vector2(16, 19)
theme_override_colors/font_color = Color(0.27451, 0.27451, 0.27451, 1)
theme_override_font_sizes/font_size = 16
text = "v"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Count" type="Label" parent="State"]
custom_minimum_size = Vector2(32, 38)
layout_mode = 0
offset_left = 214.0
offset_top = -4.0
offset_right = 246.0
offset_bottom = 34.0
pivot_offset = Vector2(16, 19)
theme_override_colors/font_color = Color(0.27451, 0.27451, 0.27451, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 20
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Select" type="Panel" parent="State"]
visible = false
custom_minimum_size = Vector2(256, 42)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gjuyh")

[node name="Plus" type="MenuButton" parent="."]
custom_minimum_size = Vector2(42, 42)
layout_mode = 0
offset_left = 264.0
offset_right = 306.0
offset_bottom = 42.0
theme = ExtResource("1_2gkkr")
theme_override_font_sizes/font_size = 26
icon = ExtResource("3_i1e4p")
flat = false
expand_icon = true

[node name="Connections" type="VBoxContainer" parent="."]
visible = false
custom_minimum_size = Vector2(256, 32)
layout_mode = 0
offset_left = 46.0
offset_top = 46.0
offset_right = 302.0
offset_bottom = 78.0
theme_override_constants/separation = 4

[node name="Delete" type="Button" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 0
offset_left = 314.0
offset_top = 5.0
offset_right = 346.0
offset_bottom = 37.0
focus_mode = 0
theme = ExtResource("1_2gkkr")
theme_override_colors/icon_normal_color = Color(0.27451, 0.27451, 0.27451, 1)
theme_override_colors/icon_pressed_color = Color(1, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0.831373, 0.831373, 0.831373, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.831373, 0.831373, 0.831373, 1)
theme_override_colors/icon_disabled_color = Color(1, 0, 0, 1)
theme_override_styles/disabled = SubResource("StyleBoxFlat_d7inu")
icon = ExtResource("3_kkjrs")
expand_icon = true

[connection signal="pressed" from="State" to="." method="_state_pressed"]
[connection signal="about_to_popup" from="Plus" to="." method="_plus_pressed"]
[connection signal="pressed" from="Delete" to="." method="_delete_pressed"]
